@@ -1,17 +1,17 @@
 package com.petties.petties.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.petties.petties.dto.clinic.InviteByEmailRequest;
+import com.petties.petties.dto.clinic.StaffResponse;
+import com.petties.petties.model.enums.Role;
+import com.petties.petties.model.enums.StaffSpecialty;
+import com.petties.petties.service.ClinicStaffService;
+import com.petties.petties.exception.ResourceAlreadyExistsException;
+import com.petties.petties.exception.ForbiddenException;
 import com.petties.petties.config.JwtAuthenticationFilter;
 import com.petties.petties.config.JwtTokenProvider;
 import com.petties.petties.config.UserDetailsServiceImpl;
-import com.petties.petties.dto.clinic.QuickAddStaffRequest;
-import com.petties.petties.dto.clinic.StaffResponse;
-import com.petties.petties.model.enums.Role;
 import com.petties.petties.repository.BlacklistedTokenRepository;
-import com.petties.petties.exception.ForbiddenException;
-import com.petties.petties.exception.ResourceAlreadyExistsException;
-import com.petties.petties.exception.ResourceNotFoundException;
-import com.petties.petties.service.ClinicStaffService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -19,6 +19,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
@@ -29,219 +30,296 @@ import java.util.UUID;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
+/**
+ * Unit tests for ClinicStaffController
+ * Tests invite-by-email, get staff, remove staff, and update specialty
+ * endpoints
+ */
 @WebMvcTest(ClinicStaffController.class)
 @AutoConfigureMockMvc(addFilters = false)
 @DisplayName("ClinicStaffController Unit Tests")
 class ClinicStaffControllerUnitTest {
 
-    @Autowired
-    private MockMvc mockMvc;
+        @Autowired
+        private MockMvc mockMvc;
 
-    @MockitoBean
-    private ClinicStaffService clinicStaffService;
+        @MockitoBean
+        private ClinicStaffService staffService;
 
-    @MockitoBean
-    private JwtTokenProvider jwtTokenProvider;
+        @MockitoBean
+        private JwtTokenProvider jwtTokenProvider;
+        @MockitoBean
+        private JwtAuthenticationFilter jwtAuthenticationFilter;
+        @MockitoBean
+        private UserDetailsServiceImpl userDetailsService;
+        @MockitoBean
+        private BlacklistedTokenRepository blacklistedTokenRepository;
 
-    @MockitoBean
-    private JwtAuthenticationFilter jwtAuthenticationFilter;
+        @Autowired
+        private ObjectMapper objectMapper;
 
-    @MockitoBean
-    private UserDetailsServiceImpl userDetailsService;
+        private UUID clinicId;
+        private UUID userId;
 
-    @MockitoBean
-    private BlacklistedTokenRepository blacklistedTokenRepository;
+        @BeforeEach
+        void setUp() {
+                clinicId = UUID.randomUUID();
+                userId = UUID.randomUUID();
+        }
 
-    @Autowired
-    private ObjectMapper objectMapper;
+        // ==================== GET CLINIC STAFF TESTS ====================
 
-    private UUID clinicId;
-    private UUID staffId;
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-001: Success - return staff list for owner")
+        void getClinicStaff_asOwner_returns200() throws Exception {
+                // Arrange
+                List<StaffResponse> staffList = Arrays.asList(
+                                StaffResponse.builder()
+                                                .userId(UUID.randomUUID())
+                                                .fullName("Dr. Nguyen")
+                                                .email("dr.nguyen@gmail.com")
+                                                .role(Role.VET)
+                                                .specialty(StaffSpecialty.VET_GENERAL)
+                                                .build(),
+                                StaffResponse.builder()
+                                                .userId(UUID.randomUUID())
+                                                .fullName("Manager Tran")
+                                                .email("manager.tran@gmail.com")
+                                                .role(Role.CLINIC_MANAGER)
+                                                .build());
+                when(staffService.getClinicStaff(clinicId)).thenReturn(staffList);
 
-    @BeforeEach
-    void setUp() {
-        clinicId = UUID.randomUUID();
-        staffId = UUID.randomUUID();
-    }
+                // Act & Assert
+                mockMvc.perform(get("/clinics/{clinicId}/staff", clinicId))
+                                .andExpect(status().isOk())
+                                .andExpect(jsonPath("$.length()").value(2))
+                                .andExpect(jsonPath("$[0].fullName").value("Dr. Nguyen"))
+                                .andExpect(jsonPath("$[0].role").value("VET"))
+                                .andExpect(jsonPath("$[1].role").value("CLINIC_MANAGER"));
+        }
 
-    @Test
-    @DisplayName("TC-UNIT-STF-001: Get Staff List Success")
-    void getStaff_Success() throws Exception {
-        List<StaffResponse> staffList = Arrays.asList(
-                StaffResponse.builder().userId(staffId).fullName("Vet A").role(Role.VET).build());
+        @Test
+        @WithMockUser(roles = "CLINIC_MANAGER")
+        @DisplayName("TC-UNIT-STAFF-002: Success - return staff list for manager")
+        void getClinicStaff_asManager_returns200() throws Exception {
+                when(staffService.getClinicStaff(clinicId)).thenReturn(List.of());
 
-        when(clinicStaffService.getClinicStaff(clinicId)).thenReturn(staffList);
+                mockMvc.perform(get("/clinics/{clinicId}/staff", clinicId))
+                                .andExpect(status().isOk());
+        }
 
-        mockMvc.perform(get("/clinics/{clinicId}/staff", clinicId))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(1))
-                .andExpect(jsonPath("$[0].fullName").value("Vet A"));
-    }
+        // ==================== INVITE STAFF TESTS ====================
 
-    @Test
-    @DisplayName("TC-UNIT-STF-002: Quick Add Staff Success")
-    void quickAddStaff_Success() throws Exception {
-        QuickAddStaffRequest request = new QuickAddStaffRequest();
-        request.setFullName("New Manager");
-        request.setPhone("0912345678");
-        request.setRole(Role.CLINIC_MANAGER);
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-003: Success - invite VET successfully")
+        void inviteByEmail_validVetRequest_returns200() throws Exception {
+                // Arrange
+                InviteByEmailRequest request = new InviteByEmailRequest();
+                request.setEmail("vet@gmail.com");
+                request.setRole(Role.VET);
+                request.setSpecialty(StaffSpecialty.VET_SURGERY);
 
-        doNothing().when(clinicStaffService).quickAddStaff(eq(clinicId), any(QuickAddStaffRequest.class));
+                doNothing().when(staffService).inviteByEmail(eq(clinicId), any(InviteByEmailRequest.class));
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/quick-add", clinicId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andExpect(content().string("Staff account created and assigned successfully"));
-    }
+                // Act & Assert
+                mockMvc.perform(post("/clinics/{clinicId}/staff/invite-by-email", clinicId)
+                                .with(csrf())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isOk())
+                                .andExpect(content().string("Staff invited successfully"));
 
-    @Test
-    @DisplayName("TC-UNIT-STF-003: Assign Manager Success")
-    void assignManager_Success() throws Exception {
-        String identifier = "manager@example.com";
+                verify(staffService).inviteByEmail(eq(clinicId), any(InviteByEmailRequest.class));
+        }
 
-        doNothing().when(clinicStaffService).assignManager(clinicId, identifier);
+        @Test
+        @WithMockUser(roles = "CLINIC_MANAGER")
+        @DisplayName("TC-UNIT-STAFF-004: Success - invite VET as manager")
+        void inviteByEmail_asManager_returns200() throws Exception {
+                InviteByEmailRequest request = new InviteByEmailRequest();
+                request.setEmail("newvet@gmail.com");
+                request.setRole(Role.VET);
+                request.setSpecialty(StaffSpecialty.VET_GENERAL);
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/manager/{identifier}", clinicId, identifier))
-                .andExpect(status().isOk())
-                .andExpect(content().string("Clinic Manager assigned successfully"));
-    }
+                doNothing().when(staffService).inviteByEmail(eq(clinicId), any(InviteByEmailRequest.class));
 
-    @Test
-    @DisplayName("TC-UNIT-STF-004: Remove Staff Success")
-    void removeStaff_Success() throws Exception {
-        doNothing().when(clinicStaffService).removeStaff(clinicId, staffId);
+                mockMvc.perform(post("/clinics/{clinicId}/staff/invite-by-email", clinicId)
+                                .with(csrf())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isOk());
+        }
 
-        mockMvc.perform(delete("/clinics/{clinicId}/staff/{staffId}", clinicId, staffId))
-                .andExpect(status().isOk())
-                .andExpect(content().string("Staff removed successfully"));
-    }
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-005: Success - invite CLINIC_MANAGER successfully")
+        void inviteByEmail_managerRole_returns200() throws Exception {
+                InviteByEmailRequest request = new InviteByEmailRequest();
+                request.setEmail("manager@gmail.com");
+                request.setRole(Role.CLINIC_MANAGER);
 
-    // --- QUICK ADD NEGATIVE TESTS ---
+                doNothing().when(staffService).inviteByEmail(eq(clinicId), any(InviteByEmailRequest.class));
 
-    @Test
-    @DisplayName("TC-UNIT-STF-005: Quick Add Staff - Duplicate Phone Fail")
-    void quickAddStaff_DuplicatePhone_Fail() throws Exception {
-        QuickAddStaffRequest request = new QuickAddStaffRequest();
-        request.setFullName("Duplicate User");
-        request.setPhone("0987654321");
-        request.setRole(Role.VET);
+                mockMvc.perform(post("/clinics/{clinicId}/staff/invite-by-email", clinicId)
+                                .with(csrf())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isOk());
+        }
 
-        doThrow(new ResourceAlreadyExistsException("Số điện thoại này đã được đăng ký tài khoản"))
-                .when(clinicStaffService).quickAddStaff(eq(clinicId), any(QuickAddStaffRequest.class));
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-006: Conflict - email already assigned")
+        void inviteByEmail_alreadyAssigned_returns409() throws Exception {
+                InviteByEmailRequest request = new InviteByEmailRequest();
+                request.setEmail("existing@gmail.com");
+                request.setRole(Role.VET);
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/quick-add", clinicId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isConflict())
-                .andExpect(jsonPath("$.message").value("Số điện thoại này đã được đăng ký tài khoản"));
-    }
+                doThrow(new ResourceAlreadyExistsException("User is already assigned to another clinic"))
+                                .when(staffService)
+                                .inviteByEmail(eq(clinicId), any(InviteByEmailRequest.class));
 
-    @Test
-    @DisplayName("TC-UNIT-STF-006: Quick Add Staff - Invalid Phone Format Fail")
-    void quickAddStaff_InvalidPhone_Fail() throws Exception {
-        QuickAddStaffRequest request = new QuickAddStaffRequest();
-        request.setFullName("Tester");
-        request.setPhone("123"); // Too short, not matching 10-11 digits
-        request.setRole(Role.VET);
+                mockMvc.perform(post("/clinics/{clinicId}/staff/invite-by-email", clinicId)
+                                .with(csrf())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isConflict());
+        }
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/quick-add", clinicId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.message").value("Số điện thoại không hợp lệ"));
-    }
+        @Test
+        @WithMockUser(roles = "CLINIC_MANAGER")
+        @DisplayName("TC-UNIT-STAFF-007: Forbidden - manager adds another manager")
+        void inviteByEmail_managerAddingManager_returns403() throws Exception {
+                InviteByEmailRequest request = new InviteByEmailRequest();
+                request.setEmail("newmanager@gmail.com");
+                request.setRole(Role.CLINIC_MANAGER);
 
-    @Test
-    @DisplayName("TC-UNIT-STF-007: Quick Add Staff - Empty Name Fail")
-    void quickAddStaff_EmptyName_Fail() throws Exception {
-        QuickAddStaffRequest request = new QuickAddStaffRequest();
-        request.setFullName("");
-        request.setPhone("0912345678");
-        request.setRole(Role.VET);
+                doThrow(new ForbiddenException("Quản lý phòng khám chỉ có quyền thêm Bác sĩ"))
+                                .when(staffService)
+                                .inviteByEmail(eq(clinicId), any(InviteByEmailRequest.class));
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/quick-add", clinicId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.message").value("Họ tên không được để trống"));
-    }
+                mockMvc.perform(post("/clinics/{clinicId}/staff/invite-by-email", clinicId)
+                                .with(csrf())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isForbidden());
+        }
 
-    @Test
-    @DisplayName("TC-UNIT-STF-008: Quick Add Staff - Invalid Role Fail")
-    void quickAddStaff_InvalidRole_Fail() throws Exception {
-        String invalidJson = "{\"fullName\":\"A\",\"phone\":\"0912345678\",\"role\":\"INVALID\"}";
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-008: Bad Request - email is blank")
+        void inviteByEmail_blankEmail_returns400() throws Exception {
+                InviteByEmailRequest request = new InviteByEmailRequest();
+                request.setEmail("");
+                request.setRole(Role.VET);
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/quick-add", clinicId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(invalidJson))
-                .andExpect(status().isBadRequest())
-                .andExpect(
-                        jsonPath("$.message").value("Dữ liệu đầu vào không đúng định dạng hoặc giá trị không hợp lệ"));
-    }
+                mockMvc.perform(post("/clinics/{clinicId}/staff/invite-by-email", clinicId)
+                                .with(csrf())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isBadRequest());
+        }
 
-    @Test
-    @DisplayName("TC-UNIT-STF-009: Quick Add Staff - Forbidden Add ADMIN Fail")
-    void quickAddStaff_AddAdmin_Forbidden_Fail() throws Exception {
-        QuickAddStaffRequest request = new QuickAddStaffRequest();
-        request.setFullName("Fake Admin");
-        request.setPhone("0912345678");
-        request.setRole(Role.ADMIN);
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-009: Bad Request - invalid email format")
+        void inviteByEmail_invalidEmail_returns400() throws Exception {
+                InviteByEmailRequest request = new InviteByEmailRequest();
+                request.setEmail("not-an-email");
+                request.setRole(Role.VET);
 
-        doThrow(new ForbiddenException("Không thể tạo tài khoản ADMIN qua chức năng này"))
-                .when(clinicStaffService).quickAddStaff(eq(clinicId), any(QuickAddStaffRequest.class));
+                mockMvc.perform(post("/clinics/{clinicId}/staff/invite-by-email", clinicId)
+                                .with(csrf())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(request)))
+                                .andExpect(status().isBadRequest());
+        }
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/quick-add", clinicId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isForbidden())
-                .andExpect(jsonPath("$.message").value("Không thể tạo tài khoản ADMIN qua chức năng này"));
-    }
+        // ==================== UPDATE SPECIALTY TESTS ====================
 
-    @Test
-    @DisplayName("TC-UNIT-STF-010: Quick Add Staff - Manager Add Manager Forbidden Fail")
-    void quickAddStaff_ManagerAddManager_Forbidden_Fail() throws Exception {
-        QuickAddStaffRequest request = new QuickAddStaffRequest();
-        request.setFullName("New Manager");
-        request.setPhone("0912345678");
-        request.setRole(Role.CLINIC_MANAGER);
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-010: Success - update specialty")
+        void updateStaffSpecialty_validRequest_returns200() throws Exception {
+                doNothing().when(staffService).updateStaffSpecialty(eq(clinicId), eq(userId),
+                                eq("VET_SURGERY"));
 
-        doThrow(new ForbiddenException("Quản lý phòng khám chỉ có quyền thêm Bác sĩ"))
-                .when(clinicStaffService).quickAddStaff(eq(clinicId), any(QuickAddStaffRequest.class));
+                mockMvc.perform(patch("/clinics/{clinicId}/staff/{userId}/specialty", clinicId, userId)
+                                .with(csrf())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content("{\"specialty\": \"VET_SURGERY\"}"))
+                                .andExpect(status().isOk())
+                                .andExpect(content().string("Staff specialty updated successfully"));
+        }
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/quick-add", clinicId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isForbidden())
-                .andExpect(jsonPath("$.message").value("Quản lý phòng khám chỉ có quyền thêm Bác sĩ"));
-    }
+        @Test
+        @WithMockUser(roles = "CLINIC_MANAGER")
+        @DisplayName("TC-UNIT-STAFF-011: Success - update specialty as manager")
+        void updateStaffSpecialty_asManager_returns200() throws Exception {
+                doNothing().when(staffService).updateStaffSpecialty(eq(clinicId), eq(userId),
+                                eq("VET_GENERAL"));
 
-    // --- ASSIGNMENT NEGATIVE TESTS ---
+                mockMvc.perform(patch("/clinics/{clinicId}/staff/{userId}/specialty", clinicId, userId)
+                                .with(csrf())
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content("{\"specialty\": \"VET_GENERAL\"}"))
+                                .andExpect(status().isOk());
+        }
 
-    @Test
-    @DisplayName("TC-UNIT-STF-011: Assign Vet - Forbidden Access Fail")
-    void assignVet_Forbidden_Fail() throws Exception {
-        String identifier = "vet@test.com";
-        doThrow(new ForbiddenException("Bạn không có quyền quản lý phòng khám này"))
-                .when(clinicStaffService).assignVet(clinicId, identifier);
+        // ==================== REMOVE STAFF TESTS ====================
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/vet/{identifier}", clinicId, identifier))
-                .andExpect(status().isForbidden())
-                .andExpect(jsonPath("$.message").value("Bạn không có quyền quản lý phòng khám này"));
-    }
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-012: Success - remove staff successfully")
+        void removeStaff_validRequest_returns200() throws Exception {
+                doNothing().when(staffService).removeStaff(clinicId, userId);
 
-    @Test
-    @DisplayName("TC-UNIT-STF-012: Assign Manager - User Not Found Fail")
-    void assignManager_NotFound_Fail() throws Exception {
-        String identifier = "nonexistent";
-        doThrow(new ResourceNotFoundException("User not found"))
-                .when(clinicStaffService).assignManager(clinicId, identifier);
+                mockMvc.perform(delete("/clinics/{clinicId}/staff/{userId}", clinicId, userId)
+                                .with(csrf()))
+                                .andExpect(status().isOk())
+                                .andExpect(content().string("Staff removed successfully"));
 
-        mockMvc.perform(post("/clinics/{clinicId}/staff/manager/{identifier}", clinicId, identifier))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.message").value("User not found"));
-    }
+                verify(staffService).removeStaff(clinicId, userId);
+        }
+
+        @Test
+        @WithMockUser(roles = "CLINIC_MANAGER")
+        @DisplayName("TC-UNIT-STAFF-013: Success - remove staff as manager")
+        void removeStaff_asManager_returns200() throws Exception {
+                doNothing().when(staffService).removeStaff(clinicId, userId);
+
+                mockMvc.perform(delete("/clinics/{clinicId}/staff/{userId}", clinicId, userId)
+                                .with(csrf()))
+                                .andExpect(status().isOk());
+        }
+
+        // ==================== HAS MANAGER TESTS ====================
+
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-014: Success - clinic has manager")
+        void hasManager_exists_returnsTrue() throws Exception {
+                when(staffService.hasManager(clinicId)).thenReturn(true);
+
+                mockMvc.perform(get("/clinics/{clinicId}/staff/has-manager", clinicId))
+                                .andExpect(status().isOk())
+                                .andExpect(content().string("true"));
+        }
+
+        @Test
+        @WithMockUser(roles = "CLINIC_OWNER")
+        @DisplayName("TC-UNIT-STAFF-015: Success - clinic has no manager")
+        void hasManager_notExists_returnsFalse() throws Exception {
+                when(staffService.hasManager(clinicId)).thenReturn(false);
+
+                mockMvc.perform(get("/clinics/{clinicId}/staff/has-manager", clinicId))
+                                .andExpect(status().isOk())
+                                .andExpect(content().string("false"));
+        }
 }
